# Mivra

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  test-mermaid.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PLUGINS.md  PLUGIN_USER_GUIDE.md  S3.md
docs/mockups/: openrouter-summary-modal.html
graphify-out/: .chunk_1.txt  .chunk_2.txt  .chunk_3.txt  .chunk_4.txt  .chunk_5.txt  .chunk_6.txt  .chunk_7.txt  .chunk_8.txt  .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_1.json  .graphify_chunk_2.json  .graphify_chunk_3.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  chunk_files_1.txt  chunk_files_10.txt  chunk_files_11.txt  chunk_files_12.txt  chunk_files_13.txt  chunk_files_14.txt  chunk_files_15.txt  chunk_files_16.txt  chunk_files_17.txt  chunk_files_18.txt  chunk_files_19.txt  chunk_files_2.txt  chunk_files_20.txt  chunk_files_21.txt  chunk_files_22.txt  chunk_files_23.txt  chunk_files_24.txt  chunk_files_25.txt  chunk_files_26.txt  (+44 more)
graphify-out/cache/: stat-index.json
memory/: INDEX.md
memory/.save-session/: config.toml  last_pull
memory/sessions/: 2026-05-26-DPBCTX-openrouter-translate-plugin.md  2026-05-26-X3RC4D-mivra-plugin-system-release-0-6-7.md
plugins/: markdown-toc-1.0.4.mivraplugin  markitdown-import-1.0.0.mivraplugin  markitdown-import-1.0.1.mivraplugin  markitdown-import-1.0.10.mivraplugin  markitdown-import-1.0.11.mivraplugin  markitdown-import-1.0.12.mivraplugin  markitdown-import-1.0.13.mivraplugin  markitdown-import-1.0.2.mivraplugin  markitdown-import-1.0.3.mivraplugin  markitdown-import-1.0.4.mivraplugin  markitdown-import-1.0.5.mivraplugin  markitdown-import-1.0.6.mivraplugin  markitdown-import-1.0.7.mivraplugin  markitdown-import-1.0.8.mivraplugin  markitdown-import-1.0.9.mivraplugin  openrouter-summary-1.0.1.mivraplugin  openrouter-translate-1.0.0.mivraplugin
plugins/export-pdf/: package.json  vite.config.ts
plugins/markdown-toc/: index.js  plugin.json  style.css
plugins/markitdown-import/: package.json  plugin.json  (+1 more)
scripts/: bump-version.mjs
src/: App.css  App.tsx  bindings.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled-plugins/export-pdf/: index.js  plugin.json  style.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  s3.rs
(+109 files in other folders)
