[package]
name = "mivra"
version = "0.6.5"
description = "Markdown-редактор для Windows 11"
authors = ["Brian"]
edition = "2021"
default-run = "mivra"

[lib]
name = "mivra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
tempfile = "3"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
